--- a/index.html
+++ b/index.html
@@ -35,27 +35,33 @@
       <br>
 
       <div class="link">
-         <a href="">
-            <div class="kotak">
-               <h2>PORTFOLIO</h2>
-            </div>
-         </a>
-         <a href="">
-            <div class="kotak">
-               <h2>ABOUT ME</h2>
-            </div>
-         </a>
-         <a href="">
-
-            <div class="kotak">
-               <h2>CERTIFICATE</h2>
-            </div>
-         </a>
-         <a href="">
-            <div class="kotak">
-               <h2>CONTACT</h2>
-            </div>
-         </a>
+         <div class="spasi-kotak">
+            <a href="">
+               <div class="kotak">
+                  <h2>PORTFOLIO</h2>
+               </div>
+            </a>
+         </div>
+         <div class="spasi-kotak">
+            <a href="">
+               <div class="kotak">
+                  <h2>ABOUT ME</h2>
+               </div>
+            </a></div>
+         <div class="spasi-kotak">
+            <a href="">
+               <div class="kotak">
+                  <h2>CERTIFICATE</h2>
+               </div>
+            </a>
+         </div>
+         <div class="spasi-kotak">
+            <a href="">
+               <div class="kotak">
+                  <h2>CONTACT</h2>
+               </div>
+            </a>
+         </div>
       </div>
       <br><br> <br><br> <br><br>
    </div><br><br> <br><br> <br><br>
