--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
 
       <div class="link">
          <div class="spasi-kotak">
-            <a href="">
+            <a href="about/about.html">
                <div class="kotak">
-                  <h2>PORTFOLIO</h2>
+                  <h2>ABOUT ME</h2>
+               </div>
+            </a></div>
+         <div class="spasi-kotak">
+            <a href="certificate/index.html">
+               <div class="kotak">
+                  <h2>CERTIFICATE</h2>
                </div>
             </a>
          </div>
          <div class="spasi-kotak">
             <a href="">
                <div class="kotak">
-                  <h2>ABOUT ME</h2>
-               </div>
-            </a></div>
-         <div class="spasi-kotak">
-            <a href="">
-               <div class="kotak">
-                  <h2>CERTIFICATE</h2>
+                  <h2>PROJECT</h2>
                </div>
             </a>
          </div>
