--- a/about/about.html
+++ b/about/about.html
@@ -29,6 +29,18 @@
          Disekolah saya ikut berbagai macam kegiatan mulai dari OSIS (ORGANISASI SISWA INTRA SEKOLAH), TIM MEDSOS,
          dan
          juga TEAM CREATIVE</p>
+
+      <hr>
+
+      <h2>Tokoh yang saya kagumi</h2>
+      <img src="https://fauzanyan.github.io/fauzanxd.github.io/assets/img/warren.jpg" alt="" class="waren">
+
+      <h3>Warren Buffet</h3>
+      <br>
+      <p>Warren Buffet adalah seorang investor legendaris asal Amerika. Di tahun 2020 Warren Buffet pernah menduduki
+         peringkat 4 orang terkaya didunia, Dia juga merupakan komisaris, direktur utama, dan pemegang saham terbesar
+         dari Berkshire Hathaway</p>
+
       <div class="pembungkus-keluar">
          <a href="../index.html">
             <div class="luar-kembali">
@@ -41,7 +53,7 @@
    </div>
 
 
-   <div style="height:20000px"></div>
+   <div style="height:200px"></div>
 </body>
 
 </html>
