--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       </div>
 
       <div class="contact">
-         <a href="">
+         <a href="https://wa.me/qr/XLIF44VQ7WWTP1">
             <img src="assets/img/whatsapp.png" alt="">
          </a>
-         <a href="">
+         <a href="https://www.instagram.com/_fauzanxd/">
             <img src="assets/img/instagram.png" alt="">
          </a>
-         <a href="">
+         <a href="https://github.com/Fauzanyan">
             <img src="assets/img/github.png" alt="">
          </a>
 
@@ -49,14 +49,14 @@
             </a>
          </div>
          <div class="spasi-kotak">
-            <a href="">
+            <a href="project/index.html">
                <div class="kotak">
                   <h2>PROJECT</h2>
                </div>
             </a>
          </div>
          <div class="spasi-kotak">
-            <a href="">
+            <a href="contact/contact.html">
                <div class="kotak">
                   <h2>CONTACT</h2>
                </div>
