--- a/contact/contact.html
+++ b/contact/contact.html
@@ -14,7 +14,7 @@
    <div class="containers">
       <h1>CONTACT</h1>
       <!-- <br> -->
-      <!-- <h3>Get in touch</h3> -->
+     <h3>Get in touch</h3> 
       <br><br>
       <h2>Social media, etc.</h2>
       <br>
