--- a/about/about.html
+++ b/about/about.html
@@ -14,21 +14,17 @@
    <div class="containers">
       <h1>ABOUT ME</h1>
       <br>
-      <p>Hi, Nama saya Muhammad Fauzan, Saya adalah seorang web developer dan seorang designer yang tinggal di
+      <p>Hi, Nama saya Muhammad Fauzan, Saya adalah seorang fullstack developer sekaligus ui/ux designer yang tinggal di
          Bandung,
-         Indonesia. Kedepannya saya berharap agar mampu menguasai semua bahasa pemrograman, untuk sekarang saya
+         Indonesia. Kedepannya saya berharap agar mampu menguasai semua bahasa pemrograman. Sekarang saya
          lebih
-         fokus di bagian Front-End dan Back-End. untuk yang tidak tau apa itu Front-End dan Back-End kalian bisa
-         langsung klik disini, yang nantinya akan diarahkan langsung ke blog saya sendiri, karena saya pernah
-         menuliskan
-         mengenai penjelasan dari Front-End, Back-End dan apa saja yang harus dikuasai, yang sudah saya rangkum
-         sendiri
-         dari website-website terpercaya.s</p>
+         fokus di bagian Fullstack Developer. </p>
       <br>
       <p>
          Disekolah saya ikut berbagai macam kegiatan mulai dari OSIS (ORGANISASI SISWA INTRA SEKOLAH), TIM MEDSOS,
          dan
-         juga TEAM CREATIVE</p>
+         juga TEAM CREATIVE, namun sayangnya di kelas 11 saya memutuskan untuk keluar dari semua kegiatan yang ada
+         disekolah.</p>
 
       <hr>
 
