--- a/contact/contact.html
+++ b/contact/contact.html
@@ -14,7 +14,7 @@
    <div class="containers">
       <h1>CONTACT</h1>
       <!-- <br> -->
-     <h3>Get in touch</h3> 
+      <h3>Get in touch</h3>
       <br><br>
       <h2>Social media, etc.</h2>
       <br>
@@ -33,6 +33,19 @@
                selanjutnya </p>
          </li>
       </ul>
+      <br>
+      <div class="contact">
+         <a href="https://wa.me/qr/XLIF44VQ7WWTP1">
+            <img src="../assets/img/whatsapp.png" alt="">
+         </a>
+         <a href="https://www.instagram.com/_fauzanxd/">
+            <img src="../assets/img/instagram.png" alt="">
+         </a>
+         <a href="https://github.com/Fauzanyan">
+            <img src="../assets/img/github.png" alt="">
+         </a>
+         <br>
+      </div>
       <div class="pembungkus-keluar">
          <a href="../index.html">
             <div class="luar-kembali">
