--- a/certificate/index.html
+++ b/certificate/index.html
@@ -21,8 +21,8 @@
          <img src="../assets/img/1.jpg" alt="" class="thumb">
          <img src="../assets/img/2.jpg" alt="" class="thumb">
          <img src="../assets/img/3.jpg" alt="" class="thumb">
-         <!-- <img src="../assets/img/4.jpg" alt="" class="thumb">
-         <img src="../assets/img/5.png" alt="" class="thumb">
+         <img src="../assets/img/4.jpg" alt="" class="thumb">
+         <!--     <img src="../assets/img/5.png" alt="" class="thumb">
          <img src="../assets/img/6.jpg" alt="" class="thumb">
          <img src="../assets/img/7.jpg" alt="" class="thumb">
          <img src="../assets/img/8.jpg" alt="" class="thumb">
