--- a/certificate/index.html
+++ b/certificate/index.html
@@ -12,39 +12,44 @@
 <body>
 
    <div class="containers">
-      <h1>CERTIFICATE</h1>
+      <h1 id="jumbo">CERTIFICATE</h1>
       <br>
+
       <div class="atas">
          <img src="../assets/img/1.jpg" alt="" class="jumbo">
       </div>
-      <div class="thumbnail">
-         <img src="../assets/img/1.jpg" alt="" class="thumb">
-         <img src="../assets/img/2.jpg" alt="" class="thumb">
-         <img src="../assets/img/3.jpg" alt="" class="thumb">
-         <img src="../assets/img/4.jpg" alt="" class="thumb">
-         <!--     <img src="../assets/img/5.png" alt="" class="thumb">
-         <img src="../assets/img/6.jpg" alt="" class="thumb">
-         <img src="../assets/img/7.jpg" alt="" class="thumb">
-         <img src="../assets/img/8.jpg" alt="" class="thumb">
-         <img src="../assets/img/9.jpg" alt="" class="thumb">
-         <img src="../assets/img/10.jpg" alt="" class="thumb">
-         <img src="../assets/img/11.jpg" alt="" class="thumb">
-         <img src="../assets/img/12.jpg" alt="" class="thumb">
-         <img src="../assets/img/13.jpg" alt="" class="thumb">
-         <img src="../assets/img/14.jpg" alt="" class="thumb">
-         <img src="../assets/img/15.jpg" alt="" class="thumb">
-         <img src="../assets/img/16.jpg" alt="" class="thumb">
-         <img src="../assets/img/17.jpg" alt="" class="thumb">
-         <img src="../assets/img/18.jpg" alt="" class="thumb">
-         <img src="../assets/img/19.jpg" alt="" class="thumb"> -->
-         <img src="../assets/img/20.jpg" alt="" class="thumb">
-         <img src="../assets/img/21.jpg" alt="" class="thumb">
-         <img src="../assets/img/22.jpg" alt="" class="thumb">
-         <img src="../assets/img/23.jpg" alt="" class="thumb">
-         <img src="../assets/img/24.jpg" alt="" class="thumb">
-         <img src="../assets/img/25.jpg" alt="" class="thumb">
-         <!-- <img src="../assets/img/26.jpg" alt="" class="thumb"> -->
-         <!-- <img src="../assets/img/27.jpg" alt="" class="thumb"> -->
+      <div class=" thumbnail">
+         <a href="#jumbo">
+            <img src="../assets/img/1.jpg" alt="" class="thumb">
+         </a>
+         <a href="#jumbo">
+            <img src="../assets/img/2.jpg" alt="" class="thumb">
+         </a>
+         <a href="#jumbo">
+            <img src="../assets/img/3.jpg" alt="" class="thumb">
+         </a>
+         <a href="#jumbo">
+            <img src="../assets/img/4.jpg" alt="" class="thumb">
+         </a>
+         <a href="#jumbo">
+            <img src="../assets/img/20.jpg" alt="" class="thumb">
+         </a>
+         <a href="#jumbo">
+            <img src="../assets/img/21.jpg" alt="" class="thumb">
+         </a>
+         <a href="#jumbo">
+            <img src="../assets/img/22.jpg" alt="" class="thumb">
+         </a>
+         <a href="#jumbo">
+            <img src="../assets/img/23.jpg" alt="" class="thumb">
+         </a>
+         <a href="#jumbo">
+            <img src="../assets/img/24.jpg" alt="" class="thumb">
+         </a>
+         <a href="#jumbo">
+            <img src="../assets/img/25.jpg" alt="" class="thumb">
+         </a>
+
 
       </div>
       <div class="pembungkus-keluar">
@@ -60,7 +65,12 @@
 
 
    <div style="height:200px"></div>
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+   </script>
+   </script>
    <script src="../assets/js/script.js"></script>
+
 </body>
 
 </html>
